# norms

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  STANDARDS.md  deny.toml  devbox.json  pyproject.toml  renovate.json
.github/workflows/: ci.yaml
src/: cli.rs  context.rs  detection.rs  lib.rs  models.rs  report.rs
src/checks/: common.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/config/: cargo.rs  devbox.rs  mod.rs  packagejson.rs  precommit.rs  pyproject.rs  renovate.rs  tsconfig.rs
src/norms/: __about__.py  __init__.py  cli.py  detection.py  models.py  verification.py
src/norms/checks/: __init__.py  base.py  common.py  python.py  registry.py
tests/: __init__.py  test_checks.py
