[package]
name = "norms"
version = "0.1.0"
edition = "2024"
description = "A tool to verify and enforce project coding standards across multiple languages."
repository = "https://github.com/aexoden/norms"
license = "Apache-2.0 OR MIT"
keywords = ["coding", "linting", "standards"]
categories = ["development-tools"]

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
json5 = "1.3.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
toml = "1.0.3"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
