[project]
name = "norms"
dynamic = ["version"]
description = "A tool to help implement and enforce coding standards."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Jason Lynch", email = "jason@aexoden.com" }]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
    "cyclopts>=4.4.3",
]

[project.scripts]
norms = "norms.cli:run"

[project.urls]
Homepage = "https://github.com/aexoden/norms"
Repository = "https://github.com/aexoden/norms.git"
Issues = "https://github.com/aexoden/norms/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/norms/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/norms"]

#
# Mypy
#

[tool.mypy]
strict = true

#
# Ruff
#

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812", # missing-trailing-comma (conflicts with ruff's formatter)
  "T201",   # print-used (used in cli.py for output)
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)SPDX-FileCopyrightText: \\d{4}"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["cyclopts.App.command"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
